# lfmv

./: .dockerignore  .gitignore  .grype.yaml  .pre-commit-config.yaml  AGENTS.md  Containerfile  README.md  pyproject.toml  renovate.json
.github/: SECURITY.md  renovate.json5
.github/workflows/: ci.yml  release.yml  weekly-scan.yml
src/lfmv/: __init__.py  __main__.py  config.py  downloader.py  http.py  imvdb.py  lidarr.py  musicbrainz.py  pipeline.py
tests/: conftest.py  constants.py  docker-compose.yml  test_config.py  test_downloader.py  test_imvdb.py  test_pipeline.py
tests/fixtures/: imvdb_artist_ok-go.html  imvdb_search_ok-go.json  imvdb_video_here-it-goes-again.html  imvdb_video_no-sources.json  imvdb_video_no_sources.html  imvdb_video_no_title.html  imvdb_video_no_year.html  imvdb_video_sources.json
