[project]
name = "lfmv"
version = "0.1.0"
description = "Lidarr FM Music Videos - automatically download music videos for Lidarr artists"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "yt-dlp>=2026.6.9",
    "click>=8.1",
    "structlog>=24.1",
]

[project.scripts]
lfmv = "lfmv.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lfmv"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests requiring docker-compose Lidarr instance",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
